# ImageProcessing

./: .gitignore  CMakeLists.txt  README.md  batch.cpp  batch.h  beierneely.cpp  beierneely.h  camera.cpp  camera.h  common.cpp  common.h  dft.cpp  editor.cpp  editor.h  event_handler.cpp  event_handler.h  event_subscriber.cpp  event_subscriber.h  events.cpp  events.h  fbo.cpp  fbo.h  ievent.h  ievent_subscriber.h  image.cpp  image.h  input.cpp  input.h  main.c  main.cpp  morphing.cpp  parser.cpp  parser.h  processor.cpp  processor.h  render.cpp  render.h  render_common.h  shader.cpp  shader.h  (+8 more)
assets/: grid.xcf  lena_std_small.tga
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/tinyfiledialogs/: hello.c  hello_wchar_t.c
doc/latex/: abstract.tex  appendixa.tex  chap1.tex  chap2.tex  chap3.tex  cover.tex  fazitausblick.tex  main.bib  main.tex
doc/pics/drawio/: komposition.drawio  linearinterpolation.drawio  linienpaare.drawio  xtoxprime.drawio
example_projects/: black_or_white.mph  black_or_white_02.mph  black_or_white_linux.mph  jolie_rock.mph  jolie_rock_03.mph  jolierock_02.mph
shaders/: basic.frag  basic.vert  final.frag
